// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkImportant component should render correctly 1`] = `
<View>
  <View
    style={
      Object {
        "justifyContent": "center",
        "marginBottom": 24,
        "marginHorizontal": 16,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "marginTop": 12,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#212745",
                "fontFamily": "BeVietnamPro-Medium",
                "fontSize": 15,
              },
              Object {},
              Array [
                Object {
                  "flex": 1,
                },
              ],
            ]
          }
        >
          Mark this article as Important
        </Text>
      </View>
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="post_settings.toggle_important"
      >
        <View
          style={
            Array [
              Object {
                "borderRadius": 100,
                "justifyContent": "center",
              },
              Object {
                "alignItems": "flex-end",
                "backgroundColor": "#007AFF",
                "height": 20,
                "width": 40,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#F2F5F8",
                  "borderRadius": 200,
                  "borderWidth": 1,
                },
                Object {
                  "height": 24,
                  "width": 24,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E3E6F2",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "marginTop": 16,
            "opacity": 1,
            "paddingLeft": 16,
            "paddingRight": 12,
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
          testID="button_wrapper.content"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#353E6E",
                  "fontFamily": "BeVietnamPro-Medium",
                  "fontSize": 15,
                },
                Object {
                  "color": "#282E53",
                },
                Object {
                  "flex": 1,
                },
              ]
            }
          >
            6 months
          </Text>
          <View
            accessibilityState={
              Object {
                "disabled": true,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  undefined,
                  Object {
                    "backgroundColor": undefined,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                <View />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#212745",
                "fontFamily": "BeVietnamPro-Light",
                "fontSize": 13,
              },
              Object {
                "color": "#353E6E",
              },
              Object {
                "marginTop": 16,
              },
            ]
          }
        >
          Expires on 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#212745",
                "fontFamily": "BeVietnamPro-Medium",
                "fontSize": 13,
              },
              Object {},
              undefined,
            ]
          }
        >
          March 15, 2023 16:28
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`MarkImportant component should render correctly when active = false 1`] = `
<View>
  <View
    style={
      Object {
        "justifyContent": "center",
        "marginBottom": 24,
        "marginHorizontal": 16,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "alignItems": "flex-start",
            "marginTop": 12,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#212745",
                "fontFamily": "BeVietnamPro-Medium",
                "fontSize": 15,
              },
              Object {},
              Array [
                Object {
                  "flex": 1,
                },
              ],
            ]
          }
        >
          Mark this article as Important
        </Text>
      </View>
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="post_settings.toggle_important"
      >
        <View
          style={
            Array [
              Object {
                "borderRadius": 100,
                "justifyContent": "center",
              },
              Object {
                "alignItems": "flex-start",
                "backgroundColor": "#D1D4DB",
                "height": 20,
                "width": 40,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#F2F5F8",
                  "borderRadius": 200,
                  "borderWidth": 1,
                },
                Object {
                  "height": 24,
                  "width": 24,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`MarkImportant component should render show warning and show list audiences with no permission 1`] = `
<View>
  <View
    style={
      Object {
        "justifyContent": "center",
        "marginBottom": 24,
        "marginHorizontal": 16,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "marginTop": 12,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#212745",
                "fontFamily": "BeVietnamPro-Medium",
                "fontSize": 15,
              },
              Object {},
              Array [
                Object {
                  "flex": 1,
                },
              ],
            ]
          }
        >
          Mark this article as Important
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#212745",
                "fontFamily": "BeVietnamPro-Light",
                "fontSize": 11,
              },
              Object {
                "color": "#F64E60",
              },
              Object {
                "marginTop": 12,
              },
            ]
          }
        >
          Cannot set because you don't have this permission at
          <Text
            style={
              Array [
                Object {
                  "color": "#212745",
                  "fontFamily": "BeVietnamPro-Light",
                  "fontSize": 11,
                },
                Object {
                  "color": "#F64E60",
                },
                undefined,
              ]
            }
          >
             Uchiha Clan, Community của Tèo 5, Bein Community
          </Text>
          . Please remove them or contact your admin
        </Text>
      </View>
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="post_settings.toggle_important"
      >
        <View
          style={
            Array [
              Object {
                "borderRadius": 100,
                "justifyContent": "center",
              },
              Object {
                "alignItems": "flex-end",
                "backgroundColor": "#007AFF",
                "height": 20,
                "width": 40,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#F2F5F8",
                  "borderRadius": 200,
                  "borderWidth": 1,
                },
                Object {
                  "height": 24,
                  "width": 24,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
